cmss/main/default/objects/ProductionTargetsAndBonuses__c/ProductionTargetsAndBonuses__c.object-meta.xml
<CustomObject>
    <description>Used for reporting of OZ&apos;s bonuses and manager&apos;s goals. This object also includes bonuses for newly recruited employees.</description>
    <label>Production Targets And Bonuses</label>
    <nameField>
        <displayFormat>PTB-{YYYY}-{MM}-{000000}</displayFormat>
        <label>Production Targets And Bonuses Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Production Targets And Bonuses</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>