cmss/main/default/objects/ProductionTargetsAndBonuses__c/fields/BonusType__c.field-meta.xml
<CustomField>
    <fullName>BonusType__c</fullName>
    <label>Bonus Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>20</fullName>
            </value>
            <value>
                <fullName>30</fullName>
            </value>
            <value>
                <fullName>40</fullName>
            </value>
            <value>
                <fullName>50</fullName>
            </value>
            <value>
                <fullName>60</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>