cmss/main/default/objects/ProductionTargetsAndBonuses__c/fields/CurrentLevel__c.field-meta.xml
<CustomField>
    <fullName>CurrentLevel__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Current Level</label>
    <length>10</length>
    <type>Text</type>
</CustomField>