cmss/main/default/objects/ProductionTargetsAndBonuses__c/fields/CurrentStateForCalc__c.field-meta.xml
<CustomField>
    <fullName>CurrentStateForCalc__c</fullName>
    <label>Current State For Calc</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>