cmss/main/default/objects/ProductionTargetsAndBonuses__c/fields/IsException__c.field-meta.xml
<CustomField>
    <fullName>IsException__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Exception</label>
    <type>Checkbox</type>
</CustomField>