cmss/main/default/objects/ProductionTargetsAndBonuses__c/fields/IsSubordinate1LevelLower__c.field-meta.xml
<CustomField>
    <fullName>IsSubordinate1LevelLower__c</fullName>
    <description>Checks if an owner of given record is subordinate of a current user</description>
    <formula>OR(
IF(
ISPICKVAL($User.AgentActivityType__c, &quot;110&quot;),
ISPICKVAL(Owner:User.AgentActivityType__c , &quot;110&quot;), false),
IF(
ISPICKVAL($User.AgentActivityType__c, &quot;108&quot;),
ISPICKVAL(Owner:User.AgentActivityType__c, &quot;110&quot;), false)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Subordinate 1 Level Lower</label>
    <type>Checkbox</type>
</CustomField>