cmss/main/default/objects/ProductionTargetsAndBonuses__c/fields/MetricType__c.field-meta.xml
<CustomField>
    <fullName>MetricType__c</fullName>
    <label>Metric Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>COUNT</fullName>
            </value>
            <value>
                <fullName>SUM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>