cmss/main/default/objects/ProductionTargetsAndBonuses__c/fields/NextBonusLevel__c.field-meta.xml
<CustomField>
    <fullName>NextBonusLevel__c</fullName>
    <description>Serves for formatting of NextBonusLevelForCalc</description>
    <formula>&quot;+ &quot; &amp;   TEXT(NextBonusLevelForCalc__c) &amp; &quot; Kč&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Next Bonus Level</label>
    <type>Text</type>
</CustomField>