cmss/main/default/objects/ProductionTargetsAndBonuses__c/fields/NextBonusLevelForCalc__c.field-meta.xml
<CustomField>
    <fullName>NextBonusLevelForCalc__c</fullName>
    <label>Next Bonus Level For Calc</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>