cmss/main/default/objects/ProductionTargetsAndBonuses__c/fields/PercentageFullfillment__c.field-meta.xml
<CustomField>
    <fullName>PercentageFullfillment__c</fullName>
    <label>Percentage Fullfillment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>