cmss/main/default/objects/ProductionTargetsAndBonuses__c/fields/PeriodStartDate__c.field-meta.xml
<CustomField>
    <fullName>PeriodStartDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Period Start Date</label>
    <type>Date</type>
</CustomField>