cmss/main/default/objects/ProductionTargetsAndBonuses__c/fields/ProductionTargetForCalc__c.field-meta.xml
<CustomField>
    <fullName>ProductionTargetForCalc__c</fullName>
    <label>Production Target For Calc</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>