cmss/main/default/objects/ProductionTargetsAndBonuses__c/fields/ProductionTargetType__c.field-meta.xml
<CustomField>
    <fullName>ProductionTargetType__c</fullName>
    <label>Production Target Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>20</fullName>
            </value>
            <value>
                <fullName>30</fullName>
            </value>
            <value>
                <fullName>40</fullName>
            </value>
            <value>
                <fullName>50</fullName>
            </value>
            <value>
                <fullName>60</fullName>
            </value>
            <value>
                <fullName>70</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>