cmss/main/default/objects/ProductionTargetsAndBonuses__c/fields/RankingInNetwork__c.field-meta.xml
<CustomField>
    <fullName>RankingInNetwork__c</fullName>
    <label>Ranking in Network</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>