cmss/main/default/objects/ProductionTargetsAndBonuses__c/fields/RankingInRegion__c.field-meta.xml
<CustomField>
    <fullName>RankingInRegion__c</fullName>
    <label>Ranking in Region</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>