cmss/main/default/objects/ProductionTargetsAndBonuses__c/fields/RecruitedBonusEligibility__c.field-meta.xml
<CustomField>
    <fullName>RecruitedBonusEligibility__c</fullName>
    <formula>IF(
AND(
Bonus__c != 0,  IsException__c = false), &quot;Ano&quot;, 
IF(
AND(Bonus__c != 0,  IsException__c = true), &quot;Ano - výjimka&quot;, &quot;Ne&quot;)
)</formula>
    <label>Recruited Bonus Eligibility</label>
    <type>Text</type>
</CustomField>