cmss/main/default/objects/ProductionTargetsAndBonuses__c/fields/RemainingToTheNextLevel__c.field-meta.xml
<CustomField>
    <fullName>RemainingToTheNextLevel__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Remaining To the Next Level</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>