cmss/main/default/objects/ProductionTargetsAndBonuses__c/fields/SummaryOfCurrentState__c.field-meta.xml
<CustomField>
    <fullName>SummaryOfCurrentState__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Summary of Current State</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>