cmss/main/default/objects/ProductionTargetsAndBonuses__c/recordTypes/Bonus.recordType-meta.xml
<RecordType>
    <fullName>Bonus</fullName>
    <active>true</active>
    <label>Bonus</label>
</RecordType>