cmss/main/default/objects/ProductionTargetsAndBonuses__c/recordTypes/RecruitedBonus.recordType-meta.xml
<RecordType>
    <fullName>RecruitedBonus</fullName>
    <active>true</active>
    <label>Recruited Bonus</label>
</RecordType>